--- a/Tier3/GrpcService/GrpcService.csproj
+++ b/Tier3/GrpcService/GrpcService.csproj
@@ -6,7 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
     <ItemGroup>
-        <Protobuf Include="Protos\message.proto" GrpcServices="Server" />
+        <Protobuf Include="Protos\user.proto" GrpcServices="Server" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
