Change in appsettings.json tier3 , if it doesnot work change protocol Http2

--- a/Tier3/GrpcService/appsettings.json
+++ b/Tier3/GrpcService/appsettings.json
@@ -8,7 +8,9 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1AndHttp2AndHttp3"
     }
   }
 }
+
+
