--- a/Tier2/pom.xml
+++ b/Tier2/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>grpc-stub</artifactId>
             <version>1.15.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
