add hashed password for users

--- a/Tier1/Tier1/BlazorAppTier1/BlazorAppTier1.csproj
+++ b/Tier1/Tier1/BlazorAppTier1/BlazorAppTier1.csproj
@@ -30,4 +30,8 @@
       <Content Include="bin\Debug\net6.0\ref\BlazorAppTier1.dll" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    </ItemGroup>
+
 </Project>
