--- a/Tier1/Tier1/HttpServices/HttpServices.csproj
+++ b/Tier1/Tier1/HttpServices/HttpServices.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Entities\Entities.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    </ItemGroup>
+
 </Project>
