Addeed entities and interfaces

--- a/Tier1/Tier1/BlazorAppTier1/BlazorAppTier1.csproj
+++ b/Tier1/Tier1/BlazorAppTier1/BlazorAppTier1.csproj
@@ -31,7 +31,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <_ContentIncludedByDefault Remove="Pages\Message\GetMessage.razor" />
+      <_ContentIncludedByDefault Remove="Pages\Message\SendMessage.razor" />
     </ItemGroup>
 
 </Project>
