Added the proto for now... feel free to change them as needed

--- a/Tier3/GrpcService/GrpcService.csproj
+++ b/Tier3/GrpcService/GrpcService.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Application\Application.csproj" />
       <ProjectReference Include="..\EFC\EFC.csproj" />
+      <ProjectReference Include="..\Entities\Entities.csproj" />
     </ItemGroup>
 
 </Project>
