--- a/Tier3/GrpcService/GrpcService.csproj
+++ b/Tier3/GrpcService/GrpcService.csproj
@@ -31,5 +31,8 @@
       <ProjectReference Include="..\EFC\EFC.csproj" />
       <ProjectReference Include="..\Entities\Entities.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Services" />
+    </ItemGroup>
 
 </Project>
